--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -241,3 +241,196 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 .mu-header-tight-space {
   margin-left: -.3em;
 }
+
+/* inline image and <img> image */
+.mu-inline-image,
+.mu-image-container {
+  font-size: 0;
+  line-height: 0;
+}
+
+.mu-inline-image {
+  position: relative;
+
+  display: inline-block;
+
+  background: var(--codeBlockBgColor);
+  border-radius: 2px;
+}
+
+.mu-inline-image.left,
+.mu-inline-image.center,
+.mu-inline-image.right {
+  display: block;
+  margin: 30px auto 40px auto;
+}
+
+.mu-inline-image.left {
+  text-align: left;
+}
+
+.mu-inline-image.right {
+  text-align: right;
+}
+
+.mu-inline-image.center {
+  text-align: center;
+}
+
+.mu-inline-image .mu-image-container {
+  position: relative;
+
+  display: inline-block;
+  overflow: visible;
+}
+
+.mu-inline-image.mu-image-success {
+  background: transparent;
+}
+
+.mu-inline-image a.mu-image-icon-success,
+.mu-inline-image a.mu-image-icon-fail,
+.mu-inline-image a.mu-image-icon-close {
+  position: absolute;
+  top: 15px;
+
+  display: none;
+  width: 20px;
+  height: 20px;
+}
+
+.mu-inline-image a.mu-image-icon-success,
+.mu-inline-image a.mu-image-icon-fail {
+  left: 15px;
+}
+
+.mu-inline-image i.icon {
+  position: relative;
+
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+
+  color: var(--iconColor);
+}
+
+.mu-inline-image i.icon > i[class^="icon-"] {
+  position: absolute;
+  left: -20px;
+
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+
+  filter: drop-shadow(20px 0 currentColor);
+}
+
+.mu-inline-image.mu-image-fail,
+.mu-inline-image.mu-empty-image {
+  width: 100%;
+  height: 50px;
+
+  cursor: pointer;
+}
+
+.mu-inline-image.mu-image-loading {
+  width: 400px;
+  height: 250px;
+  margin: 0 auto;
+
+  vertical-align: bottom;
+}
+
+.mu-inline-image.mu-image-fail::before,
+.mu-inline-image.mu-empty-image::before {
+  position: absolute;
+  top: 15px;
+  left: 50px;
+
+  display: block;
+  width: calc(100% - 50px);
+  height: 20px;
+  overflow: hidden;
+
+  color: var(--editorColor);
+  font-size: 14px;
+  line-height: 20px;
+  white-space: nowrap;
+  text-align: left;
+  text-overflow: ellipsis;
+}
+
+.mu-inline-image.mu-empty-image::before {
+  font-weight: 600;
+
+  content: 'Click to add an image';
+}
+
+.mu-inline-image.mu-image-fail::before {
+  font-weight: 600;
+
+  content: 'Load image failed';
+}
+
+.mu-inline-image.mu-image-loading a.mu-image-icon-success,
+.mu-inline-image.mu-empty-image a.mu-image-icon-success {
+  display: block;
+}
+
+.mu-inline-image.mu-image-fail a.mu-image-icon-fail {
+  display: block;
+}
+
+.mu-inline-image.mu-empty-image:hover a.mu-image-icon-close,
+.mu-inline-image.mu-image-fail:hover a.mu-image-icon-close {
+  right: 15px;
+  z-index: 1;
+
+  display: block;
+  align-items: center;
+  justify-content: space-around;
+
+  opacity: .5;
+}
+
+.mu-inline-image.mu-image-uploading .mu-image-container img {
+  opacity: .3;
+}
+
+.mu-inline-image.mu-image-success.mu-inline-image-selected .mu-image-container img {
+  filter: brightness(80%);
+}
+
+.mu-inline-image.mu-image-uploading .mu-image-container::before,
+.mu-inline-image.mu-image-uploading .mu-image-container::after,
+.mu-inline-image.mu-image-loading::before,
+.mu-inline-image.mu-image-loading::after {
+  position: absolute;
+  top: calc(50% - 11px);
+  left: calc(50% - 11px);
+
+  display: block;
+  width: 22px;
+  height: 22px;
+
+  border-radius: 50%;
+
+  content: '';
+}
+
+.mu-inline-image.mu-image-uploading .mu-image-container::before,
+.mu-inline-image.mu-image-loading::before {
+  position: absolute;
+
+  font-size: 10px;
+  text-indent: -9999px;
+
+  border-top: 2px solid var(--editorColor10);
+  border-right: 2px solid var(--editorColor10);
+  border-bottom: 2px solid var(--editorColor10);
+  border-left: 2px solid var(--iconColor);
+  transform: translateZ(0);
+
+  animation: loading 1.1s infinite linear;
+}
