--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -434,3 +434,11 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 
   animation: loading 1.1s infinite linear;
 }
+
+/* text after ``` in paragraph content */
+.mu-language {
+  color: var(--editorColor50);
+  font-weight: 600;
+  font-family: monospace;
+  text-decoration: none;
+}
