--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -156,6 +156,100 @@ span.mu-language-input {
   content: 'Input Language Identifier...';
 }
 
+/* order list and bullet list */
+ol.mu-order-list,
+ul.mu-bullet-list {
+  padding-left: 1em;
+}
+
+ul.mu-bullet-list:first-child,
+ol.mu-order-list:first-child {
+  margin-top: 0;
+}
+
+ul.mu-bullet-list:last-child,
+ol.mu-order-list:last-child {
+  margin-bottom: 0;
+}
+
+/* task list */
+ul.mu-task-list {
+  padding-left: 1em;
+}
+
+li.mu-task-list-item {
+  position: relative;
+
+  list-style-type: none;
+}
+
+li.mu-task-list-item > input[type="checkbox"] {
+  position: absolute;
+  top: .3em;
+  left: -23px;
+
+  width: 12px;
+  height: 12px;
+
+  transform-origin: center;
+  cursor: pointer;
+
+  transition: all .2s ease;
+}
+
+li.mu-task-list-item > input.mu-checkbox-checked ~ * {
+  color: var(--editorColor50);
+}
+
+li.mu-task-list-item > input[type="checkbox"]::before {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+
+  display: inline-block;
+  box-sizing: border-box;
+  width: 18px;
+  height: 18px;
+
+  background-color: var(--editorBgColor);
+  border: 2px solid var(--editorColor50);
+  border-radius: 50%;
+
+  transition: all .2s ease;
+
+  content: '';
+}
+
+li.mu-task-list-item > input::after {
+  position: absolute;
+  top: 1px;
+  left: 4px;
+
+  display: inline-block;
+  width: 8px;
+  height: 4px;
+
+  border: 2px solid var(--editorBgColor);
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg) scale(0);
+  transform-origin: bottom;
+
+  transition: all .2s ease;
+
+  content: '';
+}
+
+li.mu-task-list-item > input.mu-checkbox-checked::after {
+  transform: rotate(-45deg)  scale(1);
+}
+
+li.mu-task-list-item > input.mu-checkbox-checked::before {
+  background: var(--themeColor);
+  border-color: var(--themeColor);
+  box-shadow: 0 3px 12px 0 var(--selectionColor);
+}
+
 /* content */
 .mu-content {
   display: block;
