--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -394,6 +394,12 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   opacity: .5;
 }
 
+.mu-image-marked-text ~ img {
+  display: inline-block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .mu-inline-image.mu-image-uploading .mu-image-container img {
   opacity: .3;
 }
@@ -435,10 +441,54 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   animation: loading 1.1s infinite linear;
 }
 
+.mu-image-marked-text {
+  color: var(--editorColor50);
+  font-size: 1em;
+  text-decoration: none;
+  word-break: break-all;
+}
+
+.mu-image-marked-text::before {
+  display: inline-block;
+  width: 1.2em;
+  height: 1.2em;
+  margin-right: 5px;
+
+  vertical-align: sub;
+
+  background: url(../icons/image_light.png);
+  background-size: cover;
+
+  content: '';
+}
+
+.mu-image-marked-text.mu-image-fail::before {
+  background-image: url(../icons/image_light_fail.png);
+  background-size: cover;
+}
+
 /* text after ``` in paragraph content */
 .mu-language {
   color: var(--editorColor50);
   font-weight: 600;
   font-family: monospace;
   text-decoration: none;
+}
+
+/* reference definition */
+.mu-reference-marker {
+  color: var(--editorColor50);
+  font-size: .9em;
+}
+
+.mu-reference-title {
+  margin: 0 5px;
+
+  font-size: .9em;
+}
+
+.mu-reference-label {
+  margin: 0 5px;
+
+  font-weight: 600;
 }
