feat: handle backspace in table cell

--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -337,3 +337,7 @@ li.mu-task-list-item > input.mu-checkbox-checked::before {
   outline: none;
 }
 
+.mu-table-cell-content {
+  min-width: 10em;
+}
+
