【WIP】feat: support render math block (#3)
* feat: support render math block

* feat: import markdown

* feat: support import and export math block

--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -154,6 +154,7 @@ code.mu-inline-rule {
   transform: translateX(-50%);
 }
 
+div .mu-math-error,
 .mu-math > .mu-math-render.mu-math-error {
   color: var(--deleteColor);
   font-size: 14px;
