--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -119,7 +119,8 @@
 
 /* code block */
 .mu-code-block,
-.mu-html-container {
+.mu-html-container,
+.mu-math-container {
   position: relative;
 
   margin-top: 1.5em;
@@ -160,6 +161,10 @@ span.mu-language-input {
   color: var(--editorColor10);
 
   content: 'Input Language Identifier...';
+}
+
+.mu-code-block.mu-fenced-code.mu-active .mu-language-input {
+  left: 30px;
 }
 
 /* loose tight list */
@@ -339,8 +344,9 @@ li.mu-task-list-item > input.mu-checkbox-checked::before {
   text-align: right;
 }
 
-/* html block */
-figure.mu-html-block > .mu-html-container {
+/* html block and math block */
+figure.mu-html-block > .mu-html-container,
+figure.mu-math-block > .mu-math-container {
   position: absolute;
   z-index: -1;
 
@@ -353,11 +359,13 @@ figure.mu-html-block > .mu-html-container {
   opacity: 0;
 }
 
-figure:not(.mu-active).mu-html-block .mu-html-container {
+figure:not(.mu-active).mu-html-block .mu-html-container,
+figure:not(.mu-active).mu-math-block .mu-math-container {
   overflow: hidden;
 }
 
-figure.mu-active.mu-html-block .mu-html-container {
+figure.mu-active.mu-html-block .mu-html-container,
+figure.mu-active.mu-math-block .mu-math-container {
   position: static;
   z-index: 1;
 
@@ -369,7 +377,8 @@ figure.mu-active.mu-html-block .mu-html-container {
   opacity: 1;
 }
 
-figure.mu-html-block .mu-html-preview {
+figure.mu-html-block .mu-html-preview,
+figure.mu-math-block .mu-math-preview {
   display: block;
   width: 100%;
 }
@@ -388,8 +397,134 @@ figure.mu-html-block.mu-active .mu-html-preview {
   display: none;
 }
 
-figure.mu-html-block:not(.mu-active):hover {
+/* math block */
+figure.mu-math-block {
+  position: relative;
+}
+
+figure.mu-html-block:not(.mu-active):hover,
+figure.mu-math-block:not(.mu-active):hover {
   background: var(--editorColor04);
+}
+
+figure.mu-math-block div.mu-math-preview {
+  width: 100%;
+
+  text-align: center;
+}
+
+figure.mu-math-block div.mu-math-preview > svg {
+  width: 100%;
+}
+
+figure.mu-active.mu-math-block > div.mu-math-preview {
+  position: absolute;
+  top: calc(100% + 20px);
+  left: 50%;
+  z-index: 10000;
+
+  box-sizing: border-box;
+  width: 100%;
+  padding: .5rem;
+
+  background: var(--floatBgColor);
+  border: 1px solid var(--floatBorderColor);
+  border-radius: 4px;
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+  transform: translateX(-50%);
+}
+
+figure.mu-math-block span.mu-codeblock-content:first-of-type:empty::after {
+  color: var(--editorColor10);
+
+  content: 'Input Mathematical Formula...';
+}
+
+/* code html math ...code block style */
+pre.mu-active.mu-front-matter::before,
+pre.mu-active.mu-front-matter::after {
+  content: '---';
+}
+
+pre.mu-active.mu-math-container::before,
+pre.mu-active.mu-math-container::after {
+  content: '$$';
+}
+
+pre.mu-active[data-role="mermaid"]::before {
+  content: '``` mermaid';
+}
+
+pre.mu-active[data-role="flowchart"]::before {
+  content: '``` flowchart';
+}
+
+pre.mu-active[data-role="sequence"]::before {
+  content: '``` sequence';
+}
+
+pre.mu-active[data-role="vega-lite"]::before {
+  content: '``` vega-lite';
+}
+
+pre.mu-active.mu-fenced-code::before,
+pre.mu-active.mu-fenced-code::after,
+pre.mu-active[data-role="mermaid"]::after,
+pre.mu-active[data-role="flowchart"]::after,
+pre.mu-active[data-role="sequence"]::after,
+pre.mu-active[data-role="vega-lite"]::after {
+  content: '```';
+}
+
+pre.mu-active.mu-front-matter::before,
+pre.mu-active.mu-front-matter::after,
+pre.mu-active[data-role="mermaid"]::before,
+pre.mu-active[data-role="mermaid"]::after,
+pre.mu-active[data-role="flowchart"]::before,
+pre.mu-active[data-role="flowchart"]::after,
+pre.mu-active[data-role="sequence"]::before,
+pre.mu-active[data-role="sequence"]::after,
+pre.mu-active[data-role="vega-lite"]::before,
+pre.mu-active[data-role="vega-lite"]::after,
+pre.mu-active.mu-fenced-code::before,
+pre.mu-active.mu-fenced-code::after,
+pre.mu-active.mu-math-container::before,
+pre.mu-active.mu-math-container::after {
+  position: absolute;
+  left: 0;
+
+  color: var(--editorColor30);
+  font-weight: 100;
+}
+
+pre.mu-active.mu-front-matter::before,
+pre.mu-active[data-role="mermaid"]::before,
+pre.mu-active[data-role="flowchart"]::before,
+pre.mu-active[data-role="sequence"]::before,
+pre.mu-active[data-role="vega-lite"]::before,
+pre.mu-active.mu-math-container::before,
+pre.mu-active.mu-fenced-code::before {
+  top: -20px;
+}
+
+pre.mu-active.mu-front-matter::after,
+pre.mu-active[data-role="mermaid"]::after,
+pre.mu-active[data-role="flowchart"]::after,
+pre.mu-active[data-role="sequence"]::after,
+pre.mu-active[data-role="vega-lite"]::after,
+pre.mu-active.mu-math-container::after,
+pre.mu-active.mu-fenced-code::after {
+  bottom: -23px;
+}
+
+/* empty */
+
+.mu-empty {
+  color: var(--editorColor50);
+  font-size: 14px;
+  font-family: monospace;
+  font-style: italic;
+  text-align: center;
 }
 
 /* content */
