fix: fix some bugs when quick insert

--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -97,7 +97,7 @@
 
 .mu-thematic-break:not(.mu-active)::before {
   position: absolute;
-  top: .8em;
+  top: 1.3em;
   left: 0;
 
   display: block;
