--- a/lib/ui/frontButton/index.css
+++ b/lib/ui/frontButton/index.css
@@ -1,14 +1,23 @@
 .mu-front-button {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  width: 30px;
-  height: 30px;
+  justify-content: center;
+  width: 40px;
+  height: 26px;
 }
 
 .mu-icon-wrapper {
-  width: 18px;
-  height: 18px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 24px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+
+  border: var(--buttonBorder);
+  border-radius: 4px;
 
   cursor: grab;
   opacity: .8;
@@ -18,8 +27,8 @@
   position: relative;
 
   display: inline-block;
-  width: 100%;
-  height: 100%;
+  width: 16px;
+  height: 16px;
   overflow: hidden;
 
   color: var(--iconColor);
@@ -29,7 +38,7 @@
 
 .mu-icon-wrapper i.icon > i[class^="icon-"] { 
   position: relative;
-  left: -18px;
+  left: -16px;
 
   display: inline-block;
   width: 100%;
@@ -37,10 +46,11 @@
 
   background-size: 100% !important;
 
-  filter: drop-shadow(18px 0 currentColor);
+  filter: drop-shadow(16px 0 currentcolor);
 }
 
 .mu-icon-wrapper:hover {
+  background: var(--buttonBgColorHover);
   opacity: 1;
 }
 
@@ -54,11 +64,12 @@
 
 .mu-shadow {
   position: absolute;
+  z-index: 1;
 
-  background: #fff;
+  background: var(--editorBgColor);
   box-shadow: var(--floatShadow);
-  transform: translateX(-20px);
-  opacity: .5;
+  transform: translateX(-30px);
+  opacity: .8;
 }
 
 .mu-shadow > * {
