feat: add `search keyword` quick insert hint

--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -625,10 +625,18 @@ pre.mu-active.mu-fenced-code::after {
   outline: none;
 }
 
+#editor.mu-show-quick-insert-hint .mu-paragraph.mu-active > .mu-paragraph-content:first-of-type::after {
+  padding-left: 8px;
+
+  color: var(--editorColor10);
+
+  content: attr(placeholder);
+}
+
 #editor.mu-show-quick-insert-hint .mu-paragraph.mu-active > .mu-paragraph-content:first-of-type:empty::after {
   color: var(--editorColor10);
 
-  content: 'Type / and search';
+  content: 'Type / to insert...';
 }
 
 .mu-table-cell-content {
