--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -270,7 +270,7 @@ li.mu-task-list-item {
 
 li.mu-task-list-item > input[type="checkbox"] {
   position: absolute;
-  top: .2em;
+  top: .9em;
   left: -23px;
 
   width: 12px;
@@ -280,6 +280,10 @@ li.mu-task-list-item > input[type="checkbox"] {
   cursor: pointer;
 
   transition: all .2s ease;
+}
+
+ul.mu-tight-list > li.mu-task-list-item > input[type="checkbox"] {
+  top: .3em;
 }
 
 li.mu-task-list-item > input.mu-checkbox-checked ~ * {
