--- a/lib/ui/frontButton/index.css
+++ b/lib/ui/frontButton/index.css
@@ -2,24 +2,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 .mu-icon-wrapper {
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 34px;
+  width: 20px;
   height: 20px;
-
-  border: var(--buttonBorder);
-  border-radius: 4px;
-
+  border-radius: 3px;
   cursor: grab;
   opacity: .8;
+}
+
+.mu-icon-wrapper:hover {
+  border: var(--buttonBorder);
+}
+
+.mu-icon-wrapper:hover i.paragraph {
+  display: none;
+}
+
+.mu-icon-wrapper:hover i.drag {
+  display: block;
 }
 
 .mu-icon-wrapper i.icon {
@@ -33,6 +41,10 @@
   color: var(--iconColor);
 
   transition: all .25s ease-in-out;
+}
+
+.mu-icon-wrapper i.drag {
+  display: none;
 }
 
 .mu-icon-wrapper i.icon > i[class^="icon-"] { 
